--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
-    "@types/react": "^18.0.18",
-    "@types/react-dom": "^18.0.6",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
     "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "axios": "^0.27.2",
+    "concurrently": "^8.0.1",
+    "cors": "^2.8.5",
     "date-fns": "^2.29.2",
+    "json-server": "^0.17.3",
+    "json-server-auth": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
@@ -34,7 +38,7 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"react-scripts start\" \"json-server-auth ./src/db.json -p 3001 -r ./src/routes.json\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "serve": "serve -s build",
@@ -57,5 +61,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/json-server": "^0.14.4"
   }
 }
